# Copiuma-Cast

./: .gitignore  Copiuma.Cast.slnx  README.md  docker-compose.prod.yml  docker-compose.yml
backend/Cast.API/: Cast.API.csproj  Dockerfile  Program.cs  appsettings.Development.json  appsettings.json
backend/Cast.API/Admin/: AdminController.cs  AdminDtos.cs
backend/Cast.API/Auth/: AuthController.cs  AuthDtos.cs  JwtOptions.cs  JwtTokenService.cs
backend/Cast.API/Bets/: BetDtos.cs  BetsController.cs  BettingService.cs
backend/Cast.API/Common/: ClaimsPrincipalExtensions.cs  DeterministicGuid.cs  HandleUtil.cs
backend/Cast.API/Data/: CastDbContext.cs
backend/Cast.API/Domain/: ApplicationUser.cs  Bet.cs  BetOutcome.cs  BetWager.cs  CoinTransaction.cs  EventLogEntry.cs  Follow.cs  FriendLink.cs  Game.cs  GameEventOverride.cs  MediaItem.cs  NewsImage.cs  NewsPost.cs  Room.cs  RoomConnection.cs  RoomEventToggle.cs  RoomMembership.cs  StreamerApplication.cs  StreamerFilterSettings.cs  StreamerTagFilter.cs  StreamerWallet.cs  Tag.cs  UserConnection.cs  UserStatus.cs
backend/Cast.API/Economy/: WalletService.cs  WatchTimeAccrualService.cs
backend/Cast.API/Events/: EventConsumerService.cs  EventMessage.cs  IEventBus.cs  RabbitMqConnection.cs  RabbitMqEventBus.cs  RabbitMqOptions.cs
backend/Cast.API/Games/: GameDtos.cs  GameService.cs  GamesController.cs  ManifestCatalog.cs
backend/Cast.API/Media/: MediaController.cs  MediaDtos.cs  MediaService.cs
backend/Cast.API/Migrations/: 20260522190303_Initial.Designer.cs  20260522190303_Initial.cs  20260524125400_AddCoinTransactions.Designer.cs  20260524125400_AddCoinTransactions.cs  20260524130242_StreamerWallets.Designer.cs  20260524130242_StreamerWallets.cs  20260524131348_EconomyBetsAndPresence.Designer.cs  20260524131348_EconomyBetsAndPresence.cs  20260524133830_ProfileAndGames.Designer.cs  20260524133830_ProfileAndGames.cs  20260524191828_AvatarsAndSocial.Designer.cs  20260524191828_AvatarsAndSocial.cs  20260524193309_PresenceAndMedia.Designer.cs  20260524193309_PresenceAndMedia.cs  20260524194520_ToleranceAndAnalyticsAndPresenceAndMedia.Designer.cs  20260524194520_ToleranceAndAnalyticsAndPresenceAndMedia.cs  20260524195345_FiltersMediaCostEventToggles.Designer.cs  20260524195345_FiltersMediaCostEventToggles.cs  20260525071051_AdminAndBlocking.Designer.cs  20260525071051_AdminAndBlocking.cs  20260526075934_MediaEditPrivateGlobalTogglesNews.Designer.cs  20260526075934_MediaEditPrivateGlobalTogglesNews.cs  20260526130708_AddNewsImages.Designer.cs  20260526130708_AddNewsImages.cs  20260527095916_AddedGameManifests.Designer.cs  20260527095916_AddedGameManifests.cs  20260529120000_AddTagsTable.cs  20260529183512_AddRoomMembershipBanned.Designer.cs  20260529183512_AddRoomMembershipBanned.cs  20260530190221_AddDetailedBettingResults.Designer.cs  20260530190221_AddDetailedBettingResults.cs  (+1 more)
backend/Cast.MediaProcessing.Worker/: Cast.MediaProcessing.Worker.csproj  Dockerfile  Program.cs  appsettings.json
desktop/Cast.Desktop/: App.xaml  App.xaml.cs  Cast.Desktop.csproj  GameBridgeService.cs  MainWindow.xaml  MainWindow.xaml.cs
desktop/Cast.GameBridge/: Cast.GameBridge.csproj  GameBridgeManager.cs  ICommandFormatter.cs  IGameBridge.cs  ManifestLoader.cs  manifest.example.json
frontend/cast.web/: CHANGELOG.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.d.ts  tailwind.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
gateway/Cast.Gateway/: Cast.Gateway.csproj  Dockerfile  Program.cs  appsettings.json
native/: test_producer.cpp
native/Cast.Overlay/: Cast.Overlay.aps  Cast.Overlay.vcxproj  Cast.Overlay.vcxproj.filters  ControlChannel.cpp  ControlChannel.h  D3D11Backend.h  D3D11Hook.cpp  D3D11Hook.h  D3D11Renderer.cpp  D3D11Renderer.h  D3D9Backend.h  D3D9Hook.cpp  D3D9Hook.h  D3D9Renderer.cpp  D3D9Renderer.h  DInputHook.cpp  DInputHook.h  IGraphicsBackend.h  InputHook.cpp  InputHook.h  Logger.cpp  Logger.h  Overlay.cpp  Overlay.h  SharedControl.h  SharedFrame.cpp  SharedFrame.h  SharedFrameReader.cpp  SharedFrameReader.h  dllmain.cpp  framework.h  pch.cpp  pch.h  resource.h
native/Cast.Overlay.Host/: CMakeLists.txt  Cast.Overlay.Host.vcxproj  Cast.Overlay.Host.vcxproj.filters  OverlayApp.cpp  OverlayApp.h  OverlayClient.cpp  OverlayClient.h  SharedControlReader.cpp  SharedControlReader.h  SharedFrameWriter.cpp  SharedFrameWriter.h  main.cpp
native/Cast.Overlay.Host/Debug/: vc145.idb
native/Cast.Overlay.Host/Debug/Cast.Ove.15569f19.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cast.Overlay.Host.lastbuildstate
shared/Cast.ServiceDefaults/: Cast.ServiceDefaults.csproj  ServiceDefaultsExtensions.cs
shared/Cast.Shared/: Cast.Shared.csproj
(+194 files in other folders)
